=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.6-dev (in development)
- All communications go async.
- Version number of major build is assigned as integer number.
- The script "dist-docs/build.sh" can call with parameter -a/-c/-d. Moreover it contains "deployment mode."
- The following methods are removed.
      INTERMediator_DBAdapter.server_access
      INTERMediator_DBAdapter.db_query
      INTERMediator_DBAdapter.db_queryWithAuth
      INTERMediator_DBAdapter.db_update
      INTERMediator_DBAdapter.db_updateWithAuth
      INTERMediator_DBAdapter.db_delete
      INTERMediator_DBAdapter.db_deleteWithAuth
      INTERMediator_DBAdapter.db_createRecord
      INTERMediator_DBAdapter.db_createRecordWithAuth
      INTERMediator_DBAdapter.db_copy
      INTERMediator_DBAdapter.db_copyWithAuth
- Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php are removed.
- [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native 
  Authentication or LDAP Authentication.
- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.
- [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
  separator wasn't seen as we wished.
- [BUG FIX] In some case, the record number of related context was affected by pagination record limits.
- [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
