@@ -1,7 +1,7 @@
 {
   "name": "inter-mediator/inter-mediator",
   "version": "6-dev",
-  "time": "2018-04-19",
+  "time": "2018-06-11",
   "repositories": [
     {
       "type": "git",
