@@ -1,1 +1,0 @@
-{"version":"6-dev","releasedate":"2018-05-21"}
